welcome.lessons.welcome.variables.RunFour.scala.code
var a :Int=0

if (estsurBiscuit()) {
a=a+1
}
else { 
	avance()
}
while (a><4) {
	avance () 
	}